# Hedge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  agent.md  findings.md  progress.md  pubspec.yaml  sign_macos_app.sh  task_plan.md
Formula/: hedge.rb
cli/: README.md  pubspec.yaml
docs/: Architecture.md  Architecture_Design.md  CLI_INSTALLATION.md  COMPLETE_ANALYSIS_REPORT.md  FINAL_DECISION.md  PRD.md  QUICK_REFERENCE.md  README.md  SYNC_ANALYSIS_SUMMARY.md  SYNC_FEATURE_COMPLETE.md  TECH_VALIDATION_REPORT.md  TESTING_GUIDE.md  android-quick-reference.md  android-sync-solution.md  bluetooth-p2p-analysis.md  cloud-storage-comparison.md  cross-platform-sync-analysis.md  desktop-quick-access-architecture.md  desktop-quick-access-implementation-plan.md  desktop-quick-access-prd.md  desktop-quick-access-quickstart.md  desktop-quick-access-review-summary.md  desktop-quick-access-summary.md  implementation-guide-icloud-drive.md  implementation-guide-icloud.md  implementation-guide-webdav.md  ios-icloud-implementation-status.md  password-generator-toggle-prd.md  password-sorting-prd.md  password-sorting-tech.md  plan-cli-foundation.md  plan-company-saas.md  plan-pwd-autogen.md  refactor_plan_v2.1.md  sync-design.md  sync-implementation-complete.md  sync-strategy-recommendation.md  totp-feature-prd.md  user-experience-guarantee.md  webdav-quick-start.md  (+4 more)
integration_test/: simple_test.dart
ios/: Podfile
lib/: main.dart  (+5 more)
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: crypto.rs  mod.rs  model.rs  vault.rs
(+177 files in other folders)
